my second commit

--- a/my-first.html
+++ b/my-first.html
@@ -7,12 +7,21 @@
     <title>My First Page</title>
 </head>
 <body>
-    <h1>My First Page</h1>
+    <h1>Jennifer Torrez-Mayfield's First Web Page</h1>
+
   <section>
-    <img src="https://images.pexels.com/photos/50577/hedgehog-animal-baby-cute-50577.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="">
+    <img src="file:///Users/admin/Documents/GitHub/HTML/Linkedin%20Profile%20Picture%202.jpeg.jpg" alt="My Profile Picture">
 </section>
-    
-   <section>
+<section>"Hello, My name is Jennifer Mayfield I'm originially from Greeley, Colorado.  I grew up as an Army brat and lived all over
+     the place throughout my childhood.   One of my father's last duty stations was at White Sands Missile Range in New Mexico.  
+     I spent my last two years of High School and Colleger in Las Cruces, NM.  This was also where my grandmother was originally from.  
+      My first job out of High School was a night auditor at the Las Cruces Hilton where I discovered my appitude for numbers and persude
+    Accounting.   I had my first job as an auditor in Los Angeles, CA and worked on my MS in Accountancy from the University of Notre Dame.</section>
+   
+   I eventually settled in Austin, Texas and earned my CPA license in Texas.  I'm currently an Assistant Controller for a nonprofit that helps the community 
+   find affordable housing.  I enjoy volunteering in scouting as a Bear den leader for third graders.  We host an exchange student from Japan.  I also volunteering
+   as a volunteer deputy registar in Travis County.  I enjoy spending time traveling with my husband, my two sons and step-daughter.  
+    <section>
         <strong><a href="https://www.google.com" id="my-id" class="my_class"></a>>My most used Link</strong></a>
 </section>
     <!--In a new HTML file, create the basic structure of an HTML document and include in it the following:
