--- a/my-first.html
+++ b/my-first.html
@@ -15,7 +15,7 @@
 <section>"Hello, my name is Jennifer Mayfield I'm originally from Greeley, Colorado. I grew up as an Army brat and lived all over
 the place throughout my childhood. One of my father's last duty stations was at White Sands Missile Range in New Mexico. 
 I spent my last two years of High School and College in Las Cruces, NM. This was also where my grandmother was originally from. 
-My first job out of High School was a night auditor at the Las Cruces Hilton where I discovered my aptitude for numbers and pursued.
+My first job out of High School was a night auditor at the Las Cruces Hilton where I discovered my aptitude for numbers and pursued
 Accounting. I had my first job as an auditor in Los Angeles, CA and worked on my MS in Accountancy from the University of Notre Dame.</section>
 
 I eventually settled in Austin, Texas and earned my CPA license in Texas. I'm currently an Assistant Controller for a nonprofit that helps the community 
